; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/tests/extr_ktest.c_ktest_perf.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/tests/extr_ktest.c_ktest_perf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ktest_current_time = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ktest_perf(i8* %0, i8* %1, double %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca double, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store double %2, double* %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = call i32 (...) @mach_absolute_time()
  store i32 %9, i32* @ktest_current_time, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load double, double* %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @ktest_emit_perfdata(i8* %10, i8* %11, double %12, i8* %13)
  ret void
}

declare dso_local i32 @mach_absolute_time(...) #1

declare dso_local i32 @ktest_emit_perfdata(i8*, i8*, double, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
